--- a/config/sdm845auto.conf
+++ b/config/sdm845auto.conf
@@ -41,11 +41,9 @@ CONFIG_MACH_SDM845_JUDY=y
 CONFIG_MACH_SDM845_JUDY_LGU_KR=y
 CONFIG_SND_LGE_DTS=y
 CONFIG_SND_LGE_MABL=y
-#if !defined(CONFIG_MACH_SDM845_STYLE3LM_DCM_JP)
 CONFIG_SND_SOC_ES9218P=y
 CONFIG_SND_USE_TERT_MI2S=y
 CONFIG_SND_SOC_LGE_ESS_DIGITAL_FILTER=y
-#endif
 CONFIG_SND_SOC_TFA9872=y
 #ifdef CONFIG_MACH_SDM845_JUDYPN
 CONFIG_SND_SOC_TFA9872_STEREO=y
@@ -54,11 +52,6 @@ CONFIG_SND_LGE_DSDP_DUAL_AUDIO=y
 CONFIG_SND_LGE_TX_NXP_LIB=y
 CONFIG_SND_FM_RX_MI2S=y
 CONFIG_SND_LGE_WDSP_SSR=y
-#if defined(CONFIG_MACH_SDM845_JUDYPN) || defined(CONFIG_MACH_SDM845_STYLE3LM_DCM_JP)
+#ifdef CONFIG_MACH_SDM845_JUDYPN
 CONFIG_SND_LGE_CROSSTALK=y
-#endif
-#if defined(CONFIG_MACH_SDM845_STYLE3LM_DCM_JP)
-CONFIG_SND_USE_MBHC_EXTN_CABLE=y
-CONFIG_SND_SOC_SMA6101=y
-CONFIG_SND_LGE_STEREO_SPEAKER=y
 #endif
