--- a/arch/arm64/configs/judyln_lao_com-perf_defconfig
+++ b/arch/arm64/configs/judyln_lao_com-perf_defconfig
@@ -907,3 +907,17 @@ CONFIG_SND_LGE_WDSP_SSR=y
 
 #DT
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
+
+#
+# IO Schedulers
+#
+
+CONFIG_IOSCHED_NOOP=y
+CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_DEFAULT_SIO=y
+CONFIG_DEFAULT_IOSCHED="sio"
+# CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_FIOPS is not set
