--- a/.gitignore
+++ b/.gitignore
@@ -119,7 +119,5 @@ all.config
 # fetched Android config fragments
 kernel/configs/android-*.cfg
 
-#
-#Ignoring Android.bp link file
-#
-Android.bp
+# ignore out
+out
