--- a/arch/arm64/configs/judyln_lao_com-perf_defconfig
+++ b/arch/arm64/configs/judyln_lao_com-perf_defconfig
@@ -99,7 +99,10 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_BOOST=y
+# CONFIG_CPU_BOOST is not set
+CONFIG_CPU_INPUT_BOOST=y
+CONFIG_INPUT_BOOST_FREQ_LP=1056000
+CONFIG_INPUT_BOOST_FREQ_PERF=576000
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
 CONFIG_NET=y
