--- a/arch/arm64/configs/judyln_lao_com-perf_defconfig
+++ b/arch/arm64/configs/judyln_lao_com-perf_defconfig
@@ -105,6 +105,8 @@ CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_INPUT_BOOST=y
 CONFIG_INPUT_BOOST_FREQ_LP=1516800
 CONFIG_INPUT_BOOST_FREQ_PERF=902400
+CONFIG_MAX_BOOST_FREQ_LP=1766400
+CONFIG_MAX_BOOST_FREQ_PERF=1996800
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
 CONFIG_NET=y
